# gnome-boxes

./: Makefile.am  autogen.sh  configure.ac  meson.build  meson_options.txt
data/: meson.build
data/ui/: display-page.ui  display-toolbar.ui
po/: POTFILES.in
src/: Makefile.am  app.vala  collection-view.vala  deferred-change.vala  display-page.vala  display.vala  i-properties-provider.vala  libvirt-machine-properties.vala  libvirt-machine.vala  libvirt-system-importer.vala  machine.vala  meson.build  ovirt-machine.vala  properties-page-widget.vala  properties-snapshots.vala  properties.vala  remote-machine.vala  snapshots-property.vala  spice-display.vala  vm-configurator.vala  vnc-display.vala  wizard-source.vala  wizard-window.vala  wizard.vala
